--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             }
         }
     </style>
+    <title>AES with Cryptojs</title>
 </head>
 
 <body>
@@ -120,7 +121,6 @@
     <br>
     <p>Copyright 2018 Avneet Singh</p>
     <p>This page is hosted on github <a href="https://www.github.com/AvyChanna/AES-Cryptojs" style="text-decoration:none;color:#333">HERE</a></p>
-    <p>I assume no responsibility of any Liablity occured by using this source.</p>
     <script>
     /*
 CryptoJS v3.1.2
