Looks good on Mobile Phones
Password input and buttons touched each other.
Now, there is a decoy row between them.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <input id="pass" name="password" type="text" placeholder="Your password..">
             </div>
         </div>
+    <div class="row"><br></div>
     <div class="row">
         <input type="button" value="Encrypt" id="encrypt" onclick="encrypt()">
         <input type="button" value="Decrypt" id="decrypt" onclick="decrypt()">
